--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         padding-left: 5px;
     }
     
-    .titulosBracos {
+    .titulosBrancos {
         text-decoration: underline;
         text-underline-position: below;
         padding-bottom: 20px;
@@ -51,13 +51,13 @@
         color: white;
 
     }
-    .titulosBracos {
+    .titulosAzuis {
         text-decoration: underline;
         text-underline-position: below;
         padding-bottom: 20px;
         text-transform: uppercase;
         font-weight: 700;
-        color: #0af82a;
+        color: #45e1ec;
         
     }
 </style>
@@ -106,7 +106,7 @@
     </section>
     <div class="album py-5 bg-light">
         <div class="container">
-            <h2 class="jumbotron-heading text-center">Projetos</h2>
+            <h2 class="jumbotron-heading text-center titulosAzuis">Projetos</h2>
 
             <div class="row">
 
@@ -154,12 +154,23 @@
 
     <section class="jumbortron text-center corPrimaria">
         <div class="container">
-            <h2 class="jumbotron-heading">Sobre Mim </h2>
+            <h2 class="jumbotron-heading titulosBrancos">Sobre Mim </h2>
             <p class="lead"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis distinctio praesentium
                 dolorem qui accusantium est error, quis illo autem provident recusandae laborum quia vel quidem.
                 Recusandae quibusdam tempore tenetur natus?</p>
 
 
+        </div>
+    </section>
+    <section class="jumbotron text-center">
+        <div class="container">
+            <h2 class="jumbotron-heading text-center titulosAzuis">
+                Depoimentos
+            </h2>
+            <blockquote class="blockquote text-center">
+                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+              </blockquote>
         </div>
     </section>
 
@@ -172,7 +183,7 @@
         </div>
     </section>
 
-    <footer class="text-center">
+    <footer class="text-center corSecundaria">
         <p>Copyright 2021 Lucas de Luna Tenorio Couto - Analise e Desenvolvimento de Sistemas - Univali</p>
     </footer>
 </body>
